--- a/charts/backup/velero/crd/downloadrequests.yaml
+++ b/charts/backup/velero/crd/downloadrequests.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.10.1. Do not edit.
----
+# This file has been generated with Velero v1.13.1. Do not edit.
+
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.12.0
   labels:
     component: velero
   name: downloadrequests.velero.io
@@ -42,15 +42,19 @@ spec:
                         - BackupLog
                         - BackupContents
                         - BackupVolumeSnapshots
-                        - BackupItemSnapshots
+                        - BackupItemOperations
                         - BackupResourceList
+                        - BackupResults
                         - RestoreLog
                         - RestoreResults
+                        - RestoreResourceList
+                        - RestoreItemOperations
                         - CSIBackupVolumeSnapshots
                         - CSIBackupVolumeSnapshotContents
+                        - BackupVolumeInfos
                       type: string
                     name:
-                      description: Name is the name of the kubernetes resource with which the file is associated.
+                      description: Name is the name of the Kubernetes resource with which the file is associated.
                       type: string
                   required:
                     - kind
