--- a/charts/backup/velero/crd/podvolumebackups.yaml
+++ b/charts/backup/velero/crd/podvolumebackups.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.10.1. Do not edit.
----
+# This file has been generated with Velero v1.13.1. Do not edit.
+
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.12.0
   labels:
     component: velero
   name: podvolumebackups.velero.io
@@ -37,10 +37,6 @@ spec:
         - description: Name of the volume to be backed up
           jsonPath: .spec.volume
           name: Volume
-          type: string
-        - description: Backup repository identifier for this backup
-          jsonPath: .spec.repoIdentifier
-          name: Repository ID
           type: string
         - description: The type of the uploader to handle data transfer
           jsonPath: .spec.uploaderType
@@ -99,6 +95,7 @@ spec:
                       description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                       type: string
                   type: object
+                  x-kubernetes-map-type: atomic
                 repoIdentifier:
                   description: RepoIdentifier is the backup repository identifier.
                   type: string
@@ -106,6 +103,12 @@ spec:
                   additionalProperties:
                     type: string
                   description: Tags are a map of key-value pairs that should be applied to the volume backup as tags.
+                  type: object
+                uploaderSettings:
+                  additionalProperties:
+                    type: string
+                  description: UploaderSettings are a map of key-value pairs that should be applied to the uploader configuration.
+                  nullable: true
                   type: object
                 uploaderType:
                   description: UploaderType is the type of the uploader to handle the data transfer.
