--- a/charts/backup/velero/crd/podvolumerestores.yaml
+++ b/charts/backup/velero/crd/podvolumerestores.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.10.1. Do not edit.
----
+# This file has been generated with Velero v1.13.1. Do not edit.
+
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.12.0
   labels:
     component: velero
   name: podvolumerestores.velero.io
@@ -94,6 +94,7 @@ spec:
                       description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                       type: string
                   type: object
+                  x-kubernetes-map-type: atomic
                 repoIdentifier:
                   description: RepoIdentifier is the backup repository identifier.
                   type: string
@@ -103,6 +104,12 @@ spec:
                 sourceNamespace:
                   description: SourceNamespace is the original namespace for namaspace mapping.
                   type: string
+                uploaderSettings:
+                  additionalProperties:
+                    type: string
+                  description: UploaderSettings are a map of key-value pairs that should be applied to the uploader configuration.
+                  nullable: true
+                  type: object
                 uploaderType:
                   description: UploaderType is the type of the uploader to handle the data transfer.
                   enum:
