--- a/charts/backup/velero/crd/restores.yaml
+++ b/charts/backup/velero/crd/restores.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.10.1. Do not edit.
----
+# This file has been generated with Velero v1.13.1. Do not edit.
+
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.12.0
   labels:
     component: velero
   name: restores.velero.io
@@ -49,7 +49,7 @@ spec:
                   nullable: true
                   type: array
                 existingResourcePolicy:
-                  description: ExistingResourcePolicy specifies the restore behaviour for the kubernetes resource to be restored
+                  description: ExistingResourcePolicy specifies the restore behavior for the Kubernetes resource to be restored
                   nullable: true
                   type: string
                 hooks:
@@ -114,6 +114,7 @@ spec:
                                 description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                                 type: object
                             type: object
+                            x-kubernetes-map-type: atomic
                           name:
                             description: Name is the name of this hook.
                             type: string
@@ -143,6 +144,10 @@ spec:
                                         - Continue
                                         - Fail
                                       type: string
+                                    waitForReady:
+                                      description: WaitForReady ensures command will be launched when container is Ready instead of Running.
+                                      nullable: true
+                                      type: boolean
                                     waitTimeout:
                                       description: WaitTimeout defines the maximum amount of time Velero should wait for the container to be Ready before attempting to run the command.
                                       type: string
@@ -156,6 +161,7 @@ spec:
                                       description: InitContainers is list of init containers to be added to a pod during its restore.
                                       items:
                                         type: object
+                                        x-kubernetes-preserve-unknown-fields: true
                                       type: array
                                       x-kubernetes-preserve-unknown-fields: true
                                     timeout:
@@ -185,6 +191,9 @@ spec:
                     type: string
                   nullable: true
                   type: array
+                itemOperationTimeout:
+                  description: ItemOperationTimeout specifies the time used to wait for RestoreItemAction operations The default value is 1 hour.
+                  type: string
                 labelSelector:
                   description: LabelSelector is a metav1.LabelSelector to filter with when restoring individual objects from the backup. If empty or nil, all objects are included. Optional.
                   nullable: true
@@ -216,6 +225,7 @@ spec:
                       description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                       type: object
                   type: object
+                  x-kubernetes-map-type: atomic
                 namespaceMapping:
                   additionalProperties:
                     type: string
@@ -253,14 +263,33 @@ spec:
                         description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                         type: object
                     type: object
+                    x-kubernetes-map-type: atomic
                   nullable: true
                   type: array
                 preserveNodePorts:
                   description: PreserveNodePorts specifies whether to restore old nodePorts from backup.
                   nullable: true
                   type: boolean
+                resourceModifier:
+                  description: ResourceModifier specifies the reference to JSON resource patches that should be applied to resources before restoration.
+                  nullable: true
+                  properties:
+                    apiGroup:
+                      description: APIGroup is the group for the resource being referenced. If APIGroup is not specified, the specified Kind must be in the core API group. For any other third-party types, APIGroup is required.
+                      type: string
+                    kind:
+                      description: Kind is the type of resource being referenced
+                      type: string
+                    name:
+                      description: Name is the name of resource being referenced
+                      type: string
+                  required:
+                    - kind
+                    - name
+                  type: object
+                  x-kubernetes-map-type: atomic
                 restorePVs:
-                  description: RestorePVs specifies whether to restore all included PVs from snapshot (via the cloudprovider).
+                  description: RestorePVs specifies whether to restore all included PVs from snapshot
                   nullable: true
                   type: boolean
                 restoreStatus:
@@ -283,6 +312,15 @@ spec:
                 scheduleName:
                   description: ScheduleName is the unique name of the Velero schedule to restore from. If specified, and BackupName is empty, Velero will restore from the most recent successful backup created from this schedule.
                   type: string
+                uploaderConfig:
+                  description: UploaderConfig specifies the configuration for the restore.
+                  nullable: true
+                  properties:
+                    writeSparseFiles:
+                      description: WriteSparseFiles is a flag to indicate whether write files sparsely or not.
+                      nullable: true
+                      type: boolean
+                  type: object
               required:
                 - backupName
               type: object
@@ -300,12 +338,25 @@ spec:
                 failureReason:
                   description: FailureReason is an error that caused the entire restore to fail.
                   type: string
+                hookStatus:
+                  description: HookStatus contains information about the status of the hooks.
+                  nullable: true
+                  properties:
+                    hooksAttempted:
+                      description: HooksAttempted is the total number of attempted hooks Specifically, HooksAttempted represents the number of hooks that failed to execute and the number of hooks that executed successfully.
+                      type: integer
+                    hooksFailed:
+                      description: HooksFailed is the total number of hooks which ended with an error
+                      type: integer
+                  type: object
                 phase:
                   description: Phase is the current state of the Restore
                   enum:
                     - New
                     - FailedValidation
                     - InProgress
+                    - WaitingForPluginOperations
+                    - WaitingForPluginOperationsPartiallyFailed
                     - Completed
                     - PartiallyFailed
                     - Failed
@@ -321,6 +372,15 @@ spec:
                       description: TotalItems is the total number of items to be restored. This number may change throughout the execution of the restore due to plugins that return additional related items to restore
                       type: integer
                   type: object
+                restoreItemOperationsAttempted:
+                  description: RestoreItemOperationsAttempted is the total number of attempted async RestoreItemAction operations for this restore.
+                  type: integer
+                restoreItemOperationsCompleted:
+                  description: RestoreItemOperationsCompleted is the total number of successfully completed async RestoreItemAction operations for this restore.
+                  type: integer
+                restoreItemOperationsFailed:
+                  description: RestoreItemOperationsFailed is the total number of async RestoreItemAction operations for this restore which ended with an error.
+                  type: integer
                 startTimestamp:
                   description: StartTimestamp records the time the restore operation was started. The server's time is used for StartTimestamps
                   format: date-time
