keep restic as the default uploader to keep backwards compatibility

--- a/charts/backup/velero/templates/deployment.yaml
+++ b/charts/backup/velero/templates/deployment.yaml
@@ -47,6 +47,7 @@ spec:
         - /velero
         args:
         - server
+        - '--uploader-type={{ .Values.velero.uploaderType }}'
         {{- range .Values.velero.serverFlags }}
         - '{{ . }}'
         {{- end }}
