define securityContext for kubermatic-operator deployment

--- a/charts/kubermatic-operator/templates/deployment.yaml
+++ b/charts/kubermatic-operator/templates/deployment.yaml
@@ -73,3 +73,12 @@ spec:
           protocol: TCP
         resources:
 {{ .Values.kubermaticOperator.resources | toYaml | indent 10 }}
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          capabilities:
+            drop:
+            - ALL
+          seccompProfile:
+            type: RuntimeDefault
