--- a/charts/backup/velero/values.yaml
+++ b/charts/backup/velero/values.yaml
@@ -18,33 +18,37 @@ velero:
   # that also contains the nodeAgent binary
   image:
     repository: docker.io/velero/velero
-    tag: v1.10.1
+    tag: v1.13.1
     pullPolicy: IfNotPresent
 
-  # CLI flags to pass to velero server; note that the two flags
+  # CLI flags to pass to velero server; note that the flags `uploader-type`,
   # `default-backup-storage-location` and `default-volume-snapshot-locations`
   # are automatically set via the configuration below
   serverFlags: []
+
+  # For backwards-compatibility reasons this is kept on Restic, but Kopia is
+  # the default since Velero 1.12.
+  uploaderType: restic
 
   # Init containers to add to the Velero deployment's pod spec.
   # At least one plugin provider image is required.
   initContainers:
   # - name: velero-plugin-for-aws
-  #   image: docker.io/velero/velero-plugin-for-aws:v1.6.1
+  #   image: docker.io/velero/velero-plugin-for-aws:v1.9.1
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
   #       name: plugins
 
   # - name: velero-plugin-for-gcp
-  #   image: docker.io/velero/velero-plugin-for-gcp:v1.6.1
+  #   image: docker.io/velero/velero-plugin-for-gcp:v1.9.0
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
   #       name: plugins
 
   # - name: velero-plugin-for-microsoft-azure
-  #   image: docker.io/velero/velero-plugin-for-microsoft-azure:v1.6.1
+  #   image: docker.io/velero/velero-plugin-for-microsoft-azure:v1.9.1
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
@@ -55,7 +59,7 @@ velero:
 
   nodeAgent:
     # Resource requests/limits to specify for the node-agent daemonset deployment. Optional.
-    # https://velero.io/docs/v1.10/customize-installation/#customize-resource-requests-and-limits
+    # https://velero.io/docs/v1.13/customize-installation/#customize-resource-requests-and-limits
     resources:
       requests:
         cpu: 500m
@@ -126,9 +130,10 @@ velero:
 
   resources:
     requests:
-      cpu: 100m
-      memory: 50Mi
+      cpu: 500m
+      memory: 128Mi
     limits:
+      cpu: 1
       memory: 512Mi
 
   affinity:
