--- a/charts/monitoring/karma/test/default.yaml
+++ b/charts/monitoring/karma/test/default.yaml
@@ -12,20 +12,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-name: karma
-version: 9.9.9-dev
-appVersion: v0.120
-description: Dashboard for Prometheus Alertmanager
-keywords:
-  - kubermatic
-  - monitoring
-  - prometheus
-  - alertmanager
-  - dashboard
-home: https://github.com/prymitive/karma
-sources:
-  - https://github.com/kubermatic/kubermatic
-maintainers:
-  - name: The Kubermatic Kubernetes Platform contributors
-    email: support@kubermatic.com
+# This file is used for the testing, do not remove!
