--- a/charts/logging/loki/values.yaml
+++ b/charts/logging/loki/values.yaml
@@ -13,20 +13,7 @@
 # limitations under the License.
 
 loki:
-  image:
-    repository: docker.io/grafana/loki
   fullnameOverride: loki
-
-  affinity: {}
-  # podAntiAffinity:
-  #   requiredDuringSchedulingIgnoredDuringExecution:
-  #   - labelSelector:
-  #       matchExpressions:
-  #       - key: app
-  #         operator: In
-  #         values:
-  #         - loki
-  #     topologyKey: "kubernetes.io/hostname"
 
   # enable tracing for debug, need install jaeger and specify right jaeger_agent_host
   tracing:
@@ -48,7 +35,7 @@ loki:
       reject_old_samples: true
       reject_old_samples_max_age: 144h
       retention_period: 720h
-    schema_config:
+    schemaConfig:
       configs:
       - from: 2018-04-15
         store: boltdb
@@ -64,8 +51,13 @@ loki:
         index:
           prefix: index_
           period: 24h
-    server:
-      http_listen_port: 3100
+      - from: 2022-01-11
+        store: boltdb-shipper
+        object_store: filesystem
+        schema: v12
+        index:
+          prefix: loki_index_
+          period: 24h
     storage_config:
       boltdb:
         directory: /var/loki/index
@@ -78,9 +70,6 @@ loki:
         shared_store: filesystem
     chunk_store_config:
       max_look_back_period: 720h
-    table_manager:
-      retention_deletes_enabled: true
-      retention_period: 720h
     compactor:
       working_directory: /var/loki/boltdb-shipper-compactor
       shared_store: filesystem
@@ -90,60 +79,56 @@ loki:
       retention_delete_worker_count: 150
       max_compaction_parallelism: 10
 
-
-  ## The app name of loki clients
-  client: {}
-    # name:
-
-  nodeSelector: {}
-
-  persistence:
-    enabled: true
-    size: 15Gi
-    storageClassName: kubermatic-fast
-
-  podLabels: {}
-
-  podAnnotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "3100"
-
-  rbac:
-    pspEnabled: false
-
-  resources:
-    limits:
-      cpu: "1"
-      # Increased based on real world usage where Loki crashes on longer time periods
-      memory: 1Gi
-    requests:
-      cpu: 300m
-      memory: 256Mi
-
-  service:
-    type: ClusterIP
-    nodePort:
-    port: 3100
-    annotations: {}
-    labels: {}
-
-  tolerations: []
-
-  updateStrategy:
-    type: RollingUpdate
-
-  # This chart is tweaked for a small-scale seed setup.
-
-  gateway:
-    enabled: false
+  tableManager:
+    retention_deletes_enabled: true
+    retention_period: 720h
 
   singleBinary:
     replicas: 1
+
+    persistence:
+      enabled: true
+      size: 15Gi
+      storageClass: kubermatic-fast
+
+    resources:
+      limits:
+        cpu: "1"
+        # Increased based on real world usage where Loki crashes on longer time periods
+        memory: 1Gi
+      requests:
+        cpu: 300m
+        memory: 256Mi
+
+    podLabels: {}
+    podAnnotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "3100"
+      cluster-autoscaler.kubernetes.io/safe-to-evict-local-volumes: tmp
+
+    affinity: {}
+    # podAntiAffinity:
+    #   requiredDuringSchedulingIgnoredDuringExecution:
+    #   - labelSelector:
+    #       matchExpressions:
+    #       - key: app
+    #         operator: In
+    #         values:
+    #         - loki
+    #     topologyKey: "kubernetes.io/hostname"
+
+    nodeSelector: {}
+    tolerations: []
+
+  gateway:
+    enabled: false
 
   test:
     enabled: false
 
   monitoring:
+    dashboards:
+      enabled: false
     selfMonitoring:
       enabled: false
       grafanaAgent:
