--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1495,8 +1495,7 @@ spec:
                     konnectivityEnabled:
                       description: |-
                         Deprecated: KonnectivityEnabled enables konnectivity for controlplane to node network communication.
-                        As OpenVPN will be removed in the future KKP versions, clusters with konnectivity disabled will not be supported.
-                        All existing clusters with OpenVPN should migrate to the Konnectivity.
+                        This field is a noop, konnectivity is always deployed.
                       type: boolean
                     nodeCidrMaskSizeIPv4:
                       description: |-
