update blackbox-exporter to 0.25 (#13266)
* update blackbox-exporter to 0.25

* add tests

--- a/charts/monitoring/blackbox-exporter/test/default.yaml
+++ b/charts/monitoring/blackbox-exporter/test/default.yaml
@@ -12,19 +12,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-name: blackbox-exporter
-version: 9.9.9-dev
-appVersion: v0.25.0
-description: Deploys the Prometheus Blackbox Exporter
-keywords:
-  - kubermatic
-  - monitoring
-  - prometheus
-  - blackbox-exporter
-home: https://github.com/prometheus/blackbox_exporter
-sources:
-  - https://github.com/helm/charts/tree/master/stable/prometheus-blackbox-exporter
-maintainers:
-  - name: The Kubermatic Kubernetes Platform contributors
-    email: support@kubermatic.com
+# This file is used for the testing, do not remove!
