--- a/charts/monitoring/kube-state-metrics/templates/cluster-role.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/cluster-role.yaml
@@ -18,7 +18,7 @@ metadata:
   labels:
     app.kubernetes.io/component: exporter
     app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: 2.8.2
+    app.kubernetes.io/version: '{{ .Values.kubeStateMetrics.image.tag }}'
   name: kube-state-metrics
 rules:
 - apiGroups:
