--- a/charts/monitoring/kube-state-metrics/templates/crs-configmap.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/crs-configmap.yaml
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/component: exporter
     app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: 2.8.2
+    app.kubernetes.io/version: '{{ .Values.kubeStateMetrics.image.tag }}'
 data:
   config.yaml: |
     {{- toYaml .Values.kubeStateMetrics.customResourceState.config | nindent 4 }}
