--- a/charts/monitoring/kube-state-metrics/templates/service-account.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/service-account.yaml
@@ -13,11 +13,11 @@
 # limitations under the License.
 
 apiVersion: v1
-automountServiceAccountToken: false
 kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/component: exporter
     app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: 2.8.2
+    app.kubernetes.io/version: '{{ .Values.kubeStateMetrics.image.tag }}'
   name: kube-state-metrics
+automountServiceAccountToken: false
