--- a/charts/monitoring/grafana/config/grafana.ini
+++ b/charts/monitoring/grafana/config/grafana.ini
@@ -4,6 +4,7 @@ admin_user = {{ .Values.grafana.user | quote }}
 
 [auth]
 disable_login_form = {{ .Values.grafana.provisioning.configuration.disable_login_form }}
+signout_redirect_url = {{ .Values.grafana.provisioning.configuration.signout_redirect_url }}
 
 [auth.basic]
 enabled = false
