--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -55,7 +55,7 @@ presubmits:
             limits:
               memory: 6Gi
 
-  - name: pre-kubermatic-e2e-aws-ubuntu-1.28-ce
+  - name: pre-kubermatic-e2e-aws-ubuntu-1.28
     decorate: true
     run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
@@ -75,9 +75,7 @@ presubmits:
         - image: quay.io/kubermatic/build:go-1.22-node-20-kind-0.22-3
           env:
             - name: KUBERMATIC_EDITION
-              value: "ce"
-            - name: EXCLUDE_TESTS
-              value: "all"
+              value: "ee"
             - name: RELEASES_TO_TEST
               value: "1.28"
             - name: DISTRIBUTIONS
@@ -99,7 +97,7 @@ presubmits:
             limits:
               memory: 6Gi
 
-  - name: pre-kubermatic-e2e-aws-ubuntu-1.28
+  - name: pre-kubermatic-e2e-aws-ubuntu-1.29-ce
     decorate: true
     run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
@@ -119,9 +117,11 @@ presubmits:
         - image: quay.io/kubermatic/build:go-1.22-node-20-kind-0.22-3
           env:
             - name: KUBERMATIC_EDITION
-              value: ee
+              value: ce
+            - name: EXCLUDE_TESTS
+              value: "all"
             - name: RELEASES_TO_TEST
-              value: "1.28"
+              value: "1.29"
             - name: DISTRIBUTIONS
               value: ubuntu
             - name: SERVICE_ACCOUNT_KEY
@@ -164,6 +164,48 @@ presubmits:
               value: ee
             - name: RELEASES_TO_TEST
               value: "1.29"
+            - name: DISTRIBUTIONS
+              value: ubuntu
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          command:
+            - "./hack/ci/run-e2e-tests.sh"
+          # docker-in-docker needs privileged mode
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 3.5
+            limits:
+              memory: 6Gi
+
+  - name: pre-kubermatic-e2e-aws-ubuntu-1.30
+    decorate: true
+    run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-aws-e2e-kkp: "true"
+      preset-docker-mirror: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-vault: "true"
+      preset-repo-ssh: "true"
+      preset-e2e-ssh: "true"
+      preset-kubeconfig-ci: "true"
+      preset-kind-volume-mounts: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.22-node-20-kind-0.22-3
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: RELEASES_TO_TEST
+              value: "1.30"
             - name: DISTRIBUTIONS
               value: ubuntu
             - name: SERVICE_ACCOUNT_KEY
