--- a/addons/csi/azure-disk/csi-azuredisk-controller.yaml
+++ b/addons/csi/azure-disk/csi-azuredisk-controller.yaml
@@ -38,6 +38,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.29" }}
 {{ $version = "v1.29.2" }}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.30" }}
+{{ $version = "v1.29.2" }}
+{{ end }}
 
 ---
 apiVersion: apps/v1
