--- a/addons/csi/azure-file/csi-azurefile-driver.yaml
+++ b/addons/csi/azure-file/csi-azurefile-driver.yaml
@@ -32,6 +32,14 @@
 {{ $version = "v1.28.3" }}
 {{ $snapshot = "v6.2.1" }}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.29" }}
+{{ $version = "v1.29.4" }}
+{{ $snapshot = "v6.2.1" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.30" }}
+{{ $version = "v1.30.1" }}
+{{ $snapshot = "v6.2.1" }}
+{{ end }}
 
 ---
 apiVersion: storage.k8s.io/v1
