--- a/addons/csi/azure-file/csi-azurefile-node.yaml
+++ b/addons/csi/azure-file/csi-azurefile-node.yaml
@@ -36,6 +36,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.29" }}
 {{ $version = "v1.29.2" }}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.30" }}
+{{ $version = "v1.30.1" }}
+{{ end }}
 ---
 apiVersion: apps/v1
 kind: DaemonSet
