--- a/addons/csi/openstack/nodeplugin.yaml
+++ b/addons/csi/openstack/nodeplugin.yaml
@@ -35,7 +35,10 @@
 {{ $version = "v1.28.1" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.29" }}
-{{ $version = "v1.28.1" }}
+{{ $version = "v1.29.0" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.30" }}
+{{ $version = "v1.29.0" }}
 {{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
